<resources>
    <string name="app_name">SurveyApp</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="reset_button">Reset</string>
    <string name="survey_question_text">Are you going trick-or-treating?</string>
    <string name="yes_count_text"></string>
    <string name="no_count_text"></string>
    <string name="continue_survey_button">Continue Survey</string>
    <string name="new_question">Enter your new question here</string>
    <string name="option_one">Option One</string>
    <string name="option_two">Option Two</string>
    <string name="save_new_question">Save</string>
    <string name="enter_new_question">Enter a new question</string>

</resources>
